--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
+pip>=23.3
+setuptools>=68
+wheel
+
 Flask==3.0.0
 Flask-SQLAlchemy==3.1.1
 Flask-Login==0.6.3
 psycopg2-binary==2.9.9
 Werkzeug==3.0.1
 plotly==5.18.0
-pandas==2.1.4
+pandas==2.0.3
 numpy==1.26.2
 scikit-learn==1.3.2
 joblib==1.3.2
